--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
-  "name": "turkcedokuman",
+  "name": "turkcedokuman.com",
   "version": "2.0.0",
+  "description": "Yazılım alanında sıfırdan eğitim veren Türkçe dokümanlar",
+  "author": {
+    "name": "Ömer Gülçiçek",
+    "email": "iletisim@omergulcicek.com",
+    "url": "https://omergulcicek.com"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -21,6 +27,15 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/omergulcicek/turkce-dokuman.git"
+  },
+  "homepage": "https://turkcedokuman.com/",
+  "bugs": {
+    "url": "https://github.com/omergulcicek/turkce-dokuman/issues"
+  },
+  "license": "MIT",
   "browserslist": {
     "production": [
       ">0.2%",
