--- a/v2/package.json
+++ b/v2/package.json
@@ -16,6 +16,8 @@
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-parallax-tilt": "^1.7.163",
     "tailwindcss": "3.3.3"
   }
 }
