--- a/v2/package.json
+++ b/v2/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-parallax-tilt": "^1.7.163",
+    "react-reveal": "^1.2.2",
     "tailwindcss": "3.3.3"
   }
 }
