--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-parallax-tilt": "^1.7.163",
-    "react-reveal": "^1.2.2",
     "tailwindcss": "3.3.3"
   }
 }
